# ws_proto

./: CMakeLists.txt  README.adoc  index.html
.drone/: drone.bat  drone.sh
.github/workflows/: ci.yml
doc/: antora.yml  build_antora.bat  generate-files.mjs  local-playbook.yml  mrdocs.yml  package-lock.json
doc/modules/ROOT/: nav.adoc
doc/modules/ROOT/pages/: design.adoc  index.adoc  sans_io_philosophy.adoc
include/boost/: ws_proto.hpp
include/boost/ws_proto/: close_code.hpp  error.hpp  handshake.hpp  parser.hpp  serializer.hpp
include/boost/ws_proto/detail/: config.hpp
include/boost/ws_proto/impl/: error.hpp
meta/: explicit-failures-markup.xml  libraries.json
src/: error.cpp  handshake.cpp  parser.cpp  serializer.cpp  src.cpp
src_zlib/: src_zlib.cpp
test/: CMakeLists.txt  Jamfile
test/cmake_test/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  Jamfile  close_code.cpp  error.cpp  handshake.cpp  parser.cpp  serializer.cpp  test.cpp
